@@ -1837,7 +1837,20 @@ loop:		while (true)
 	 */
 	private void propertiesChanged()
 	{
-		setJMenuBar(GUIUtilities.loadMenuBar("view.mbar"));
+		JMenuBar mbar = GUIUtilities.loadMenuBar("view.mbar");
+
+		// menu bar mnemonics take precedence over other shortcut definitions
+		for (int i = 0; i < mbar.getMenuCount(); i++)
+		{
+			JMenu menu = mbar.getMenu(i);
+			int mnemonic = menu.getMnemonic();
+			if (mnemonic != 0)
+			{
+				inputHandler.removeKeyBinding("A+" + Character.toLowerCase((char) mnemonic));
+			}
+		}
+
+		setJMenuBar(mbar);
 
 		loadToolBars();
 
